# hellocpp

./: .gitignore  Dockerfile  Procfile  README.md  build-task.yml  build.sh  k8s-deployment.yml  pipeline-binary.yml  pipeline-docker.yml  pipeline-kubernetes.yml  pipeline.yml
app/: CMakeLists.txt  build.sh  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  hello.cpp  index.html  main  main.cpp  manifest-docker.yml  manifest.yml  mime_types.cpp  mime_types.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
app/docker/cf-boost/: Dockerfile
config/: k8s-rbac.yml
